apps/devpath-sandbox-svc/base/runner-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devpath-sandbox-runner
  labels:
    app: devpath-sandbox-runner
spec:
  selector:
    app: devpath-sandbox-runner
  ports:
    - name: docker-mtls
      port: 2376
      targetPort: 2376
