apps/devpath-sandbox-svc/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devpath-sandbox-svc
  labels:
    app: devpath-sandbox-svc
spec:
  selector:
    app: devpath-sandbox-svc
  ports:
    - port: 8080
      targetPort: 8080
